fixed bug with right menu sliding in from left on small screens

--- a/src/app/css/app.less
+++ b/src/app/css/app.less
@@ -212,7 +212,7 @@ a,a:link,a:visited,a:hover,a:active, {
 		left:-90%;
 	}
 	.menuright{
-		left:-100%;
+		left:100%;
 	}
 	.menuleft.active{left:0%;}
 	.menuright.active{left:10%;}
